--- a/scss/base/_icons.scss
+++ b/scss/base/_icons.scss
@@ -68,3 +68,4 @@ $fa-microphone-alt: f3c9;
 $fa-window-close: f410;
 $fa-user-friends: f500;
 $fa-book-reader: f5da;
+$fa-earth-americas: f57d; // icon for Cultural Competency course in Module Resouces block
