--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -196,24 +196,26 @@ select, option {
   }
 }
 // Give links in lists the same styling as if they were in paragraphs within lists
-[id^="page-mod-"] #region-main div[role=main] div:not(.navbottom) {
-  li a:link {
-    @extend %ds-link;
-    i.open-icon {
-      display: inline-block;
-      margin: 0.375rem 0 0.375rem 0.375rem;
-      vertical-align: baseline;
-      transform: translateY(-10%);
-    }
-  }
-  ol.custom-ol {
-    li {
-      p {
-        display: inline;
+[id^="page-mod-"] #region-main div[role=main] {
+  div:not(.navbottom) {
+    li a:link {
+      @extend %ds-link;
+      i.open-icon {
+        display: inline-block;
+        margin: 0.375rem 0 0.375rem 0.375rem;
+        vertical-align: baseline;
+        transform: translateY(-10%);
       }
-      a:link i.open-icon {
-        margin-left: 1.575rem;
-        margin-right: -0.375rem;
+    }
+    ol.custom-ol {
+      li {
+        p {
+          display: inline;
+        }
+        a:link i.open-icon {
+          margin-left: 1.575rem;
+          margin-right: -0.375rem;
+        }
       }
     }
   }
