--- a/scss/activities/_feedback.scss
+++ b/scss/activities/_feedback.scss
@@ -1,24 +1,109 @@
 /* Feedback
    ======================== */
 
-.path-mod-feedback {
+ .path-mod-feedback {
   // question and submission settings
   #id_feedbackhdr {
     .col-md-3 {
       flex: 1;
-      max-width: 100%;      
+      max-width: 100%;
     }
   }
   #region-main {
-    div[role="main"] {
-      // hide activity preview button
-      h2 > a {
-        display: none;
+    ul.nav.nav-tabs {
+      @media only screen and (max-width: $neo-breakpoint) {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        li a {
+          border-radius: 4px;
+        }
+      }
+      margin-left: 0;
+      li {
+        &:not(:last-child) {
+          margin-bottom: 0 !important;
+        }
+        a {
+          @extend %h5;
+          padding: 8px 18px;
+          margin-right: 10px !important;
+          margin-bottom: 0;
+          color: $midnight-blue;
+          text-decoration: none;
+          &:hover {
+            background-color: $block-background;
+            color: $midnight-blue;
+          }
+        }
+        &.active {
+          a {
+            color: $white;
+            &:hover {
+              background-color: $midnight-blue;
+            }
+          }
+        }
       }
     }
+    .singleselect .form-inline {
+      flex-wrap: nowrap;
+      &::before {
+        content: "Add";
+        @extend %p;
+        font-weight: bold;
+        margin-bottom: 0;
+      }
+      label {
+        display: none;
+      }
+      select.custom-select {
+        width: 376px;
+      }
+      margin-bottom: $component-margin-bottom-lg;
+    }
     .feedback_form {
+      &.mform.full-width-labels {
+        .fitem .felement {
+          &[class^="col-"] {
+            @media only screen and (min-width: $xl-breakpoint) {
+              padding-left: 15px;
+            }
+          }
+        }
+      }
       .fitem {
-        margin: 0;
+        margin: 0 0 $component-margin-bottom;
+        &.form-group.row {
+          padding-bottom: 0;
+        }
+        // moving the cursor arrow to the right end of the page on desktop
+        &:not(label[class^="form-check"]) {
+          justify-content: space-between;
+        }
+          .itemhandle {
+          padding-left: 15px;
+          padding-bottom: 15px;
+        }
+        .col-md-3 {
+          max-width: 100%;
+          flex: 0 0 100%;
+          margin-bottom: $component-margin-bottom-sm;
+          .menubar.d-flex {
+            margin-top: $component-margin-sm;
+          }
+          label, p {
+            font-weight: bold;
+            font-size: 1rem;
+            line-height: 1.5;
+            .dropdown a{
+              font-weight: normal;
+            }
+          }
+        }
+        .d-flex.align-items-center {
+          margin-bottom: 0;
+        }
         .fitemtitle {
           margin: 0 !important;
           padding: 0 !important;
@@ -42,7 +127,24 @@
         }
         // input fields
         .felement > * {
-          margin-bottom: $component-margin-bottom-sm !important;
+          margin-bottom: $component-margin-bottom !important;
+          label {
+            font-size: 1rem;
+            &.form-check-inline {
+              display: inline-flex !important;
+              align-items: baseline;
+              input[type="radio"], input[type="checkbox"] {
+                margin-right: 8px;
+              }
+              span.weight {
+                margin-right: 4px;
+              }
+            }
+          }
+        }
+        .form-inline .form-control {
+          width: 100%;
+          max-width: none;
         }
         // feedback mode
         &.feedback_mode {
@@ -62,6 +164,53 @@
             margin-top: 3rem !important;
           }
         }
+        // Formatting for the anonymous mode div
+        &#fitem_id_anonymousmode {
+          .col-md-3:first-child {
+            display: none !important;
+          }
+          padding: $component-margin-xs 0 0 15px;
+          .col-md-9.felement {
+            margin-bottom: 0 !important;
+            .form-control-static {
+              margin-bottom: $component-margin-bottom-lg !important;
+            }
+          }
+        }
+        // Applying specs to the info question
+        &[id^="fitem_id_info"] {
+          .col-md-9 {
+            margin-bottom: $component-margin-bottom;
+          }
+        }
+        // Applying specs to the label question and required fields div
+        &[id^="fitem_id_label"], &#fitem_id_requiredfields {
+          .col-md-3:first-child {
+            display: none !important;
+          }
+          .col-md-9 {
+            margin-top: 0;
+            p {
+              &:last-child {
+                margin-bottom: 0;
+              }
+            }
+          }
+        }
+        // Removing bottom border and margin from last question
+        &:nth-last-child(2):not(.form-submit) {
+          margin-bottom: 0;
+          border-bottom: 0;
+        }
+        // Applying specs to the container for the submit and cancel buttons
+        &#fgroup_id_buttonar {
+          padding-top: 0;
+          padding-left: 0;
+          border-bottom: 0;
+          .col-md-9 {
+            margin-top: $component-margin-xs;
+          }
+        }
       }
       // submit and cancel buttons
       .fitem_actionbuttons {
@@ -73,6 +222,9 @@
           display: flex;
           justify-content: center;
         }
+      }
+      .form-submit {
+        margin-right: $component-margin-xs;
       }
     }
   }
