--- a/scss/activities/_ouwiki.scss
+++ b/scss/activities/_ouwiki.scss
@@ -1,57 +1,55 @@
 /* OU Wiki
    ======================== */
 
-#page-mod-ouwiki-view, #page-mod-ouwiki-edit, #page-mod-ouwiki-history, #page-mod-ouwiki-wikiindex, #page-mod-ouwiki-wikihistory, #page-mod-ouwiki-participation {
+%ou-wiki-item-top-heading {
+  background: tint($sea-blue, 90%);
+  margin-top: 0;
+  padding: $component-padding-sm;
+  border: 1px solid $rules-and-outlines;
+  border-bottom: 0;
+}
+%ou-wiki-item-bottom-content {
+  background: $white;
+  padding: $component-padding-sm;
+  border: 1px solid $rules-and-outlines;
+  border-top: 0;
+}
+
+[id^="page-mod-ouwiki-"] {
   #region-main {
     #ouwiki_indexlinks {
-      ul li a {
+      .osep-smallbutton,
+      ul li span {
         padding: $component-padding-xs;
         border-width: 1px;
         border-radius: 4px;
-        border-color: $rules-and-outlines;
         background: $white;
         color: $midnight-blue;
         line-height: 1;
         font-size: 100%;
         display: inline-block;
+      }
+      .osep-smallbutton {
+        border-color: $rules-and-outlines;
         &:hover {
           background: $block-background;
         }
       }
-    }
-    ul.nav.nav-tabs {
-      margin-left: 0;
-      li {
-        &:not(:last-child) {
-          margin-bottom: 0 !important;
-        }
-        a {
-          @extend %h5;
-          padding: 8px 18px;
-          margin-right: 10px !important;
-          margin-bottom: 0;
-          color: $midnight-blue;
-          &:hover {
-            background-color: $block-background;
-          }
-        }
-        &.active {
-          a {
-            color: $white;
-            &:hover {
-              background-color: $midnight-blue;
-            }
-          }
-        } 
+      // active page
+      ul li span {
+        font-weight: bold;
+        border: 1px solid $midnight-blue;
       }
     }
+    ul.nav.nav-tabs {
+      @extend %first-tab-nav;
+      margin-bottom: $component-margin-bottom !important;
+    }
     .ouwiki-content {
+      margin-bottom: $component-margin-bottom;
       .ouw_topheading {
-        background: tint($sea-blue, 90%);
-        margin-top: 0;
+        @extend %ou-wiki-item-top-heading;
         padding: $component-padding;
-        border: 1px solid $rules-and-outlines;
-        border-bottom: 0;
         h2.ouw_topheading {
           padding: 0;
           border: 0;
@@ -65,47 +63,34 @@
         }
       }
       .ouw_belowmainhead {
-        border: 1px solid $rules-and-outlines;
-        border-top: 0;
-        padding: $component-padding $component-padding 0;
-        .ouwiki_content h3 {
-          border-bottom: none;
+        @extend %ou-wiki-item-bottom-content;
+        padding: $component-padding;
+        .ouw_topspacer {
+          padding-top: 0;
+        }
+        .ouwiki_content {
+          & > p:last-of-type {
+            margin-bottom: 0;
+          }
+          h3 {
+            border-bottom: none;
+            padding: 0;
+          }
         }
       }
     }
   }
 }
-#page-mod-ouwiki-wikiindex #region-main {
-  #ouwiki_indexlinks #ouwiki_nav_index {
-    font-weight: bold;
-    span {
-      padding: $component-padding-xs;
-      border-radius: 4px;
-      border-color: $midnight-blue;
-      border-width: 2px;
-      background: $white;
-      color: $midnight-blue;
-      line-height: 1;
-      font-size: 100%;
-      display: inline-block;
-      &:hover {
-        background: $block-background;
-      }
-    }
-  }
+
+// Wiki index
+#page-mod-ouwiki-wikiindex {
   #ouwiki_belowtabs {
     div.ouw_title {
-      background: tint($sea-blue, 90%);
-      border: 1px solid $rules-and-outlines;
-      border-bottom: 0;
-      padding: $component-padding-sm;
-      color: $body-text;
+      @extend %ou-wiki-item-top-heading;
       font-weight: bold;
     }
     div.ouw_indexinfo {
-      border: 1px solid $rules-and-outlines;
-      border-top: 0;
-      padding: $component-padding-sm;
+    @extend %ou-wiki-item-bottom-content;
       span {
         color: $body-text;
       }
@@ -115,44 +100,19 @@
     }
   }
 }
-#page-mod-ouwiki-wikihistory #ouwiki_indexlinks {
-  #ouwiki_nav_history {
-    font-weight: bold;
-    span {
-      padding: $component-padding-xs;
-      border-radius: 4px;
-      border-color: $midnight-blue;
-      border-width: 2px;
-      background: $white;
-      color: $midnight-blue;
-      line-height: 1;
-      font-size: 100%;
-      display: inline-block;
-      &:hover {
-        background: $block-background;
-      }
+
+// Participation by user
+#page-mod-ouwiki-participation {
+  .pagination {
+    margin: 0 !important;
+    .page-item.active a {
+      color: $white !important;
+      text-decoration: none !important;
     }
   }
 }
-#page-mod-ouwiki-participation #ouwiki_indexlinks {
-  #ouwiki_nav_participation {
-    font-weight: bold;
-    span {
-      padding: $component-padding-xs;
-      border-radius: 4px;
-      border-color: $midnight-blue;
-      border-width: 2px;
-      background: $white;
-      color: $midnight-blue;
-      line-height: 1;
-      font-size: 100%;
-      display: inline-block;
-      &:hover {
-        background: $block-background;
-      }
-    }
-  }
-}
+
+// Edit tab
 #page-mod-ouwiki-edit {
   input#preview {
     @extend %btn-secondary;
@@ -162,28 +122,25 @@
     @extend %btn-secondary;
   }
 }
+
+// History > Changes
 #page-mod-ouwiki-diff {
-  .ouw_left, .ouw_right {
-    .ouw_versionbox {
-      background: tint($sea-blue, 90%);
-      border: 1px solid $rules-and-outlines;
-      border-bottom: 0;
-      padding: 1rem;
-      color: $body-text;      
+  .ouw_versionbox {
+    @extend %ou-wiki-item-top-heading;
+  }
+  .ouw_diff.ouwiki_content {
+    @extend %ou-wiki-item-bottom-content;
+    // highlight changes
+    .ouw_added, .ouw_deleted {
+      background: tint($yellow, 80%);
+      color: $body-text;
+      text-decoration: none;
     }
-    .ouw_diff.ouwiki_content {
-      background: $white;
-      border: 1px solid $rules-and-outlines;
-      border-top: 0;
-      padding: $component-padding-sm;
-      .ouw_added, .ouw_deleted {
-        background: tint($yellow, 80%);
-        color: $body-text;
-        text-decoration: none;
-      }
-      h3 {
-        border-bottom: none;
-      }
+    // Attachments heading
+    h3 {
+      @extend %h5;
+      border-bottom: none;
+      padding: 0;
     }
   }
 }
