--- a/scss/activities/_quiz.scss
+++ b/scss/activities/_quiz.scss
@@ -54,6 +54,10 @@
   .generalbox#feedback {
      margin: 0;
      padding: 0;
+     width: 100%;
+     .quizgradefeedback {
+      text-align: left;
+     }
   }
   .quizstartbuttondiv form {
     text-align: left;
