--- a/scss/activities/_book.scss
+++ b/scss/activities/_book.scss
@@ -88,7 +88,7 @@
   .navtop,
   .navbottom {
     padding: 0 !important;
-    margin-top: $component-margin-lg 0;
+    margin: $component-margin-lg 0;
     text-align: center;
     border: none !important;
     a {
