--- a/scss/activities/_choice.scss
+++ b/scss/activities/_choice.scss
@@ -82,6 +82,7 @@
           display: block;
           table {
             @extend %table-bordered;
+            border-top: 1px solid $table-border !important;
           }
         }
       }
