--- a/scss/base/_icons.scss
+++ b/scss/base/_icons.scss
@@ -69,3 +69,4 @@ $fa-window-close: f410;
 $fa-user-friends: f500;
 $fa-book-reader: f5da;
 $fa-earth-americas: f57d; // icon for Cultural Competency course in Module Resouces block
+$fa-quote-left: f10d; // left double quotation mark for blockquote
