--- a/scss/main.scss
+++ b/scss/main.scss
@@ -63,6 +63,7 @@
 @import "activities/url";
 @import "activities/webinar";
 
+@import "pages/calendar";
 @import "pages/courseview";
 @import "pages/editor";
 @import "pages/filemanager";
