--- a/css/print-book.css
+++ b/css/print-book.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 #page-mod-book-print p a,
 #page-mod-book-print li p a,
 #page-mod-book-print figcaption a {
@@ -15,6 +14,11 @@
 #page-mod-book-print p a:visited,
 #page-mod-book-print figcaption a:visited {
   color: #0A2D50;
+}
+
+#page-mod-book-print p a.external-link-no-wrap,
+#page-mod-book-print figcaption a.external-link-no-wrap {
+  white-space: nowrap;
 }
 
 #page-mod-book-print mark.text-highlight, #page-mod-book-print a.link-download, #page-mod-book-print a.link-to-video {
@@ -33916,14 +33920,14 @@ html {
 
 #page-mod-book-print .blockquote > :first-child::before,
 #page-mod-book-print .quote-box > :first-child::before {
-  content: '“';
-  color: #464E52;
-  font-family: "KingsCaslonDisplay";
-  font-size: 4.5rem;
+  font-family: "Font Awesome 5 Free";
   font-weight: 900;
-  top: 2.5rem;
+  content: "\f10d";
+  color: #464E52;
+  font-size: 1.5rem;
+  top: 18px;
   position: absolute;
-  left: 1rem;
+  left: 20px;
 }
 
 #page-mod-book-print .blockquote .quote-attribution,
@@ -33951,10 +33955,6 @@ html {
   border: none;
   margin-bottom: 1.5rem !important;
   padding: 0;
-}
-
-#page-mod-book-print figure.quote-box blockquote.quote-body::before, #page-mod-book-print figure.blockquote blockquote.quote-body::before {
-  top: 0.5rem;
 }
 
 #page-mod-book-print figure.quote-box blockquote.quote-body p, #page-mod-book-print figure.blockquote blockquote.quote-body p {
@@ -34045,13 +34045,12 @@ html {
   margin-bottom: 0;
 }
 
-#page-mod-book-print .card img,
 #page-mod-book-print .card figure {
   margin: 0 1.5rem 0 0;
   width: 330px;
 }
 
-#page-mod-book-print .card img.img-top {
+#page-mod-book-print .card img {
   width: 100%;
   height: 100%;
   margin: 0 0 1.5rem 0;
@@ -34100,7 +34099,7 @@ html {
 }
 
 #page-mod-book-print .card-deck .card:last-child {
-  margin: 0 0 1.5rem 1rem !important;
+  margin: 0 0 1.5rem 0 !important;
 }
 
 #page-mod-book-print .card-deck .card > figure {
@@ -40957,6 +40956,7 @@ html {
   content: "Audio transcript";
 }
 
+#page-mod-book-print .academic-note-container,
 #page-mod-book-print .view-generic-container,
 #page-mod-book-print .view-answer-container,
 #page-mod-book-print .view-description-container,
@@ -40966,9 +40966,16 @@ html {
   margin-bottom: 1.5rem;
 }
 
-#page-mod-book-print .view-generic-container > h3, #page-mod-book-print .view-generic-container > h4, #page-mod-book-print .view-generic-container > h5, #page-mod-book-print .view-generic-container > h6,
+#page-mod-book-print .academic-note-container > h3, #page-mod-book-print .academic-note-container > h4, #page-mod-book-print .academic-note-container > h5, #page-mod-book-print .academic-note-container > h6,
+#page-mod-book-print .academic-note-container > p,
+#page-mod-book-print .academic-note-container > ul, #page-mod-book-print .academic-note-container > ol,
+#page-mod-book-print .view-generic-container > h3,
+#page-mod-book-print .view-generic-container > h4,
+#page-mod-book-print .view-generic-container > h5,
+#page-mod-book-print .view-generic-container > h6,
 #page-mod-book-print .view-generic-container > p,
-#page-mod-book-print .view-generic-container > ul, #page-mod-book-print .view-generic-container > ol,
+#page-mod-book-print .view-generic-container > ul,
+#page-mod-book-print .view-generic-container > ol,
 #page-mod-book-print .view-answer-container > h3,
 #page-mod-book-print .view-answer-container > h4,
 #page-mod-book-print .view-answer-container > h5,
@@ -40998,14 +41005,15 @@ html {
 #page-mod-book-print .view-model-answer-container > ul,
 #page-mod-book-print .view-model-answer-container > ol {
   font-size: 1.2rem;
-  margin-left: calc(150px + 1.5rem);
   border-left: 2px solid #5A6469;
   padding-left: 1.5rem;
   margin-bottom: 0;
   padding-bottom: 1.5rem;
 }
 
-#page-mod-book-print .view-generic-container > ul, #page-mod-book-print .view-generic-container > ol,
+#page-mod-book-print .academic-note-container > ul, #page-mod-book-print .academic-note-container > ol,
+#page-mod-book-print .view-generic-container > ul,
+#page-mod-book-print .view-generic-container > ol,
 #page-mod-book-print .view-answer-container > ul,
 #page-mod-book-print .view-answer-container > ol,
 #page-mod-book-print .view-description-container > ul,
@@ -41017,6 +41025,7 @@ html {
   padding-left: 3.75rem;
 }
 
+#page-mod-book-print .academic-note-container [class*="view-hide-"],
 #page-mod-book-print .view-generic-container [class*="view-hide-"],
 #page-mod-book-print .view-answer-container [class*="view-hide-"],
 #page-mod-book-print .view-description-container [class*="view-hide-"],
@@ -41025,6 +41034,7 @@ html {
   display: none;
 }
 
+#page-mod-book-print .academic-note-container [class*="-card"] > .card-body,
 #page-mod-book-print .view-generic-container [class*="-card"] > .card-body,
 #page-mod-book-print .view-answer-container [class*="-card"] > .card-body,
 #page-mod-book-print .view-description-container [class*="-card"] > .card-body,
@@ -41034,6 +41044,7 @@ html {
   border: none;
 }
 
+#page-mod-book-print .academic-note-container [class*="-card"] > .card-body .card-author:not(.no-image),
 #page-mod-book-print .view-generic-container [class*="-card"] > .card-body .card-author:not(.no-image),
 #page-mod-book-print .view-answer-container [class*="-card"] > .card-body .card-author:not(.no-image),
 #page-mod-book-print .view-description-container [class*="-card"] > .card-body .card-author:not(.no-image),
@@ -41043,6 +41054,8 @@ html {
   padding-right: 1.5rem;
 }
 
+#page-mod-book-print .academic-note-container [class*="-card"] > .card-body .card-author:not(.no-image) > img,
+#page-mod-book-print .academic-note-container [class*="-card"] > .card-body .card-author:not(.no-image) > .filter-ally-wrapper > img,
 #page-mod-book-print .view-generic-container [class*="-card"] > .card-body .card-author:not(.no-image) > img,
 #page-mod-book-print .view-generic-container [class*="-card"] > .card-body .card-author:not(.no-image) > .filter-ally-wrapper > img,
 #page-mod-book-print .view-answer-container [class*="-card"] > .card-body .card-author:not(.no-image) > img,
@@ -41054,12 +41067,13 @@ html {
 #page-mod-book-print .view-model-answer-container [class*="-card"] > .card-body .card-author:not(.no-image) > img,
 #page-mod-book-print .view-model-answer-container [class*="-card"] > .card-body .card-author:not(.no-image) > .filter-ally-wrapper > img {
   border-radius: 50%;
-  width: 75px;
+  width: 150px;
   max-width: 150px !important;
   height: auto;
   margin: 0 0 0.625rem 0;
 }
 
+#page-mod-book-print .academic-note-container [class*="-card"] > .card-body .card-author:not(.no-image) .card-title,
 #page-mod-book-print .view-generic-container [class*="-card"] > .card-body .card-author:not(.no-image) .card-title,
 #page-mod-book-print .view-answer-container [class*="-card"] > .card-body .card-author:not(.no-image) .card-title,
 #page-mod-book-print .view-description-container [class*="-card"] > .card-body .card-author:not(.no-image) .card-title,
@@ -41067,8 +41081,21 @@ html {
 #page-mod-book-print .view-model-answer-container [class*="-card"] > .card-body .card-author:not(.no-image) .card-title {
   width: 150px;
   max-width: 150px;
+  font-size: 1.2rem;
 }
 
+#page-mod-book-print .academic-note-container [class*="-card"] > .card-body > .card-text,
+#page-mod-book-print .view-generic-container [class*="-card"] > .card-body > .card-text,
+#page-mod-book-print .view-answer-container [class*="-card"] > .card-body > .card-text,
+#page-mod-book-print .view-description-container [class*="-card"] > .card-body > .card-text,
+#page-mod-book-print .view-feedback-container [class*="-card"] > .card-body > .card-text,
+#page-mod-book-print .view-model-answer-container [class*="-card"] > .card-body > .card-text {
+  flex: 1;
+  border-left: 2px solid #5A6469;
+  padding-left: 1.5rem;
+}
+
+#page-mod-book-print .academic-note-container [class*="-card"] > .card-body > .card-text > :last-child,
 #page-mod-book-print .view-generic-container [class*="-card"] > .card-body > .card-text > :last-child,
 #page-mod-book-print .view-answer-container [class*="-card"] > .card-body > .card-text > :last-child,
 #page-mod-book-print .view-description-container [class*="-card"] > .card-body > .card-text > :last-child,
@@ -41077,100 +41104,102 @@ html {
   margin-bottom: 0;
 }
 
-#page-mod-book-print .view-generic-container [class*="-card"] > .card-body .card-text:only-child,
-#page-mod-book-print .view-generic-container [class*="-card"] > .card-body > p,
-#page-mod-book-print .view-answer-container [class*="-card"] > .card-body .card-text:only-child,
-#page-mod-book-print .view-answer-container [class*="-card"] > .card-body > p,
-#page-mod-book-print .view-description-container [class*="-card"] > .card-body .card-text:only-child,
-#page-mod-book-print .view-description-container [class*="-card"] > .card-body > p,
-#page-mod-book-print .view-feedback-container [class*="-card"] > .card-body .card-text:only-child,
-#page-mod-book-print .view-feedback-container [class*="-card"] > .card-body > p,
-#page-mod-book-print .view-model-answer-container [class*="-card"] > .card-body .card-text:only-child,
-#page-mod-book-print .view-model-answer-container [class*="-card"] > .card-body > p {
-  border-left: 2px solid #5A6469;
-  padding-left: 1.5rem;
-}
-
-#page-mod-book-print .view-generic-container [class*="-card"] > .card-body > .card-text,
-#page-mod-book-print .view-answer-container [class*="-card"] > .card-body > .card-text,
-#page-mod-book-print .view-feedback-container [class*="-card"] > .card-body > .card-text,
-#page-mod-book-print .view-model-answer-container [class*="-card"] > .card-body > .card-text {
-  border-left: 2px solid #5A6469;
-  padding-left: 1.5rem;
-  width: 100%;
-}
-
-#page-mod-book-print .view-generic-container [class*="-card"] > .card-body > .card-text:only-child,
-#page-mod-book-print .view-generic-container [class*="-card"] > .card-body > p,
-#page-mod-book-print .view-answer-container [class*="-card"] > .card-body > .card-text:only-child,
-#page-mod-book-print .view-answer-container [class*="-card"] > .card-body > p,
-#page-mod-book-print .view-feedback-container [class*="-card"] > .card-body > .card-text:only-child,
-#page-mod-book-print .view-feedback-container [class*="-card"] > .card-body > p,
-#page-mod-book-print .view-model-answer-container [class*="-card"] > .card-body > .card-text:only-child,
-#page-mod-book-print .view-model-answer-container [class*="-card"] > .card-body > p {
+#page-mod-book-print .academic-note-container:has(.card-author img) > h3, #page-mod-book-print .academic-note-container:has(.card-author img) > h4, #page-mod-book-print .academic-note-container:has(.card-author img) > h5, #page-mod-book-print .academic-note-container:has(.card-author img) > h6,
+#page-mod-book-print .academic-note-container:has(.card-author img) > p,
+#page-mod-book-print .academic-note-container:has(.card-author img) > ul, #page-mod-book-print .academic-note-container:has(.card-author img) > ol,
+#page-mod-book-print .view-generic-container:has(.card-author img) > h3,
+#page-mod-book-print .view-generic-container:has(.card-author img) > h4,
+#page-mod-book-print .view-generic-container:has(.card-author img) > h5,
+#page-mod-book-print .view-generic-container:has(.card-author img) > h6,
+#page-mod-book-print .view-generic-container:has(.card-author img) > p,
+#page-mod-book-print .view-generic-container:has(.card-author img) > ul,
+#page-mod-book-print .view-generic-container:has(.card-author img) > ol,
+#page-mod-book-print .view-answer-container:has(.card-author img) > h3,
+#page-mod-book-print .view-answer-container:has(.card-author img) > h4,
+#page-mod-book-print .view-answer-container:has(.card-author img) > h5,
+#page-mod-book-print .view-answer-container:has(.card-author img) > h6,
+#page-mod-book-print .view-answer-container:has(.card-author img) > p,
+#page-mod-book-print .view-answer-container:has(.card-author img) > ul,
+#page-mod-book-print .view-answer-container:has(.card-author img) > ol,
+#page-mod-book-print .view-description-container:has(.card-author img) > h3,
+#page-mod-book-print .view-description-container:has(.card-author img) > h4,
+#page-mod-book-print .view-description-container:has(.card-author img) > h5,
+#page-mod-book-print .view-description-container:has(.card-author img) > h6,
+#page-mod-book-print .view-description-container:has(.card-author img) > p,
+#page-mod-book-print .view-description-container:has(.card-author img) > ul,
+#page-mod-book-print .view-description-container:has(.card-author img) > ol,
+#page-mod-book-print .view-feedback-container:has(.card-author img) > h3,
+#page-mod-book-print .view-feedback-container:has(.card-author img) > h4,
+#page-mod-book-print .view-feedback-container:has(.card-author img) > h5,
+#page-mod-book-print .view-feedback-container:has(.card-author img) > h6,
+#page-mod-book-print .view-feedback-container:has(.card-author img) > p,
+#page-mod-book-print .view-feedback-container:has(.card-author img) > ul,
+#page-mod-book-print .view-feedback-container:has(.card-author img) > ol,
+#page-mod-book-print .view-model-answer-container:has(.card-author img) > h3,
+#page-mod-book-print .view-model-answer-container:has(.card-author img) > h4,
+#page-mod-book-print .view-model-answer-container:has(.card-author img) > h5,
+#page-mod-book-print .view-model-answer-container:has(.card-author img) > h6,
+#page-mod-book-print .view-model-answer-container:has(.card-author img) > p,
+#page-mod-book-print .view-model-answer-container:has(.card-author img) > ul,
+#page-mod-book-print .view-model-answer-container:has(.card-author img) > ol {
   margin-left: calc(150px + 1.5rem);
-  max-width: calc(100% - 150px - 1.5rem);
 }
 
-#page-mod-book-print .academic-note-container {
-  break-inside: avoid;
-  margin-bottom: 1.5rem;
+#page-mod-book-print .academic-note-container.multi-author:has(.card-author img) > h3, #page-mod-book-print .academic-note-container.multi-author:has(.card-author img) > h4, #page-mod-book-print .academic-note-container.multi-author:has(.card-author img) > h5, #page-mod-book-print .academic-note-container.multi-author:has(.card-author img) > h6,
+#page-mod-book-print .academic-note-container.multi-author:has(.card-author img) > p,
+#page-mod-book-print .academic-note-container.multi-author:has(.card-author img) > ul, #page-mod-book-print .academic-note-container.multi-author:has(.card-author img) > ol,
+#page-mod-book-print .view-generic-container.multi-author:has(.card-author img) > h3,
+#page-mod-book-print .view-generic-container.multi-author:has(.card-author img) > h4,
+#page-mod-book-print .view-generic-container.multi-author:has(.card-author img) > h5,
+#page-mod-book-print .view-generic-container.multi-author:has(.card-author img) > h6,
+#page-mod-book-print .view-generic-container.multi-author:has(.card-author img) > p,
+#page-mod-book-print .view-generic-container.multi-author:has(.card-author img) > ul,
+#page-mod-book-print .view-generic-container.multi-author:has(.card-author img) > ol,
+#page-mod-book-print .view-answer-container.multi-author:has(.card-author img) > h3,
+#page-mod-book-print .view-answer-container.multi-author:has(.card-author img) > h4,
+#page-mod-book-print .view-answer-container.multi-author:has(.card-author img) > h5,
+#page-mod-book-print .view-answer-container.multi-author:has(.card-author img) > h6,
+#page-mod-book-print .view-answer-container.multi-author:has(.card-author img) > p,
+#page-mod-book-print .view-answer-container.multi-author:has(.card-author img) > ul,
+#page-mod-book-print .view-answer-container.multi-author:has(.card-author img) > ol,
+#page-mod-book-print .view-description-container.multi-author:has(.card-author img) > h3,
+#page-mod-book-print .view-description-container.multi-author:has(.card-author img) > h4,
+#page-mod-book-print .view-description-container.multi-author:has(.card-author img) > h5,
+#page-mod-book-print .view-description-container.multi-author:has(.card-author img) > h6,
+#page-mod-book-print .view-description-container.multi-author:has(.card-author img) > p,
+#page-mod-book-print .view-description-container.multi-author:has(.card-author img) > ul,
+#page-mod-book-print .view-description-container.multi-author:has(.card-author img) > ol,
+#page-mod-book-print .view-feedback-container.multi-author:has(.card-author img) > h3,
+#page-mod-book-print .view-feedback-container.multi-author:has(.card-author img) > h4,
+#page-mod-book-print .view-feedback-container.multi-author:has(.card-author img) > h5,
+#page-mod-book-print .view-feedback-container.multi-author:has(.card-author img) > h6,
+#page-mod-book-print .view-feedback-container.multi-author:has(.card-author img) > p,
+#page-mod-book-print .view-feedback-container.multi-author:has(.card-author img) > ul,
+#page-mod-book-print .view-feedback-container.multi-author:has(.card-author img) > ol,
+#page-mod-book-print .view-model-answer-container.multi-author:has(.card-author img) > h3,
+#page-mod-book-print .view-model-answer-container.multi-author:has(.card-author img) > h4,
+#page-mod-book-print .view-model-answer-container.multi-author:has(.card-author img) > h5,
+#page-mod-book-print .view-model-answer-container.multi-author:has(.card-author img) > h6,
+#page-mod-book-print .view-model-answer-container.multi-author:has(.card-author img) > p,
+#page-mod-book-print .view-model-answer-container.multi-author:has(.card-author img) > ul,
+#page-mod-book-print .view-model-answer-container.multi-author:has(.card-author img) > ol {
+  margin-left: calc(300px + (2 * 1.5rem));
 }
 
 #page-mod-book-print .academic-note-container .academic-note-card > .card-body {
-  display: flex;
   flex-wrap: wrap;
-}
-
-#page-mod-book-print .academic-note-container .academic-note-card > .card-body .card-author:not(.no-image) {
-  text-align: center;
-}
-
-#page-mod-book-print .academic-note-container .academic-note-card > .card-body .card-author:not(.no-image) > img,
-#page-mod-book-print .academic-note-container .academic-note-card > .card-body .card-author:not(.no-image) > .filter-ally-wrapper > img {
-  border-radius: 50%;
-  width: 75px;
-  max-width: 75px !important;
-  height: auto;
-  margin: 0 0 0.625rem 0;
-}
-
-#page-mod-book-print .academic-note-container .academic-note-card > .card-body .card-author:not(.no-image) .card-title {
-  max-width: 150px;
 }
 
 #page-mod-book-print .academic-note-container .academic-note-card > .card-body .card-author.no-image {
   order: 2;
   flex: 0 1 100%;
-  margin-left: calc(150px + 1.5rem);
   padding: 1.5rem 0 0 1.5rem;
   border-left: 2px solid #5A6469;
 }
 
 #page-mod-book-print .academic-note-container .academic-note-card > .card-body .card-author.no-image .card-title {
   margin-bottom: 0;
-}
-
-#page-mod-book-print .academic-note-container .academic-note-card > .card-body .card-author.no-image + .card-text {
-  margin-left: calc(150px + 1.5rem);
-  max-width: calc(100% - 150px - 1.5rem);
-}
-
-#page-mod-book-print .academic-note-container .academic-note-card > .card-body > .card-text {
-  flex: 1;
-  margin-left: 1.5rem;
-  padding-left: 1.5rem;
-  border-left: 2px solid #5A6469;
-}
-
-#page-mod-book-print .academic-note-container .academic-note-card > .card-body > .card-text > :last-child {
-  margin-bottom: 0;
-}
-
-#page-mod-book-print .academic-note-container .academic-note-card > .card-body > .card-text:only-child,
-#page-mod-book-print .academic-note-container .academic-note-card > .card-body > p {
-  margin-left: calc(150px + 1.5rem);
-  max-width: calc(100% - 150px - 1.5rem);
+  font-size: 1.2rem;
 }
 
 #page-mod-book-print .float-box .view-generic-container,
