--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -87,6 +87,9 @@
   &:visited {
     color: $midnight-blue;
   }
+  &.external-link-no-wrap {
+    white-space: nowrap;
+  }
 }
 %ds-link {
   @include ds-link;
@@ -194,6 +197,8 @@
   }
   & > div {
     & > .card-body {
+      display: flex;
+      flex-wrap: wrap;
       border-left: 4px solid $pearl-grey;
       padding: 0 0 0 $component-margin;
       max-width: 100%;
@@ -201,6 +206,13 @@
         display: flex;
         align-items: center;
         margin-bottom: $component-margin-bottom;
+        // we added the following to make it work with 2 authors in
+        // one consultancy course: https://keats.kcl.ac.uk/mod/book/view.php?id=4621952&chapterid=426074
+        &.multi-author {
+          .card-title {
+            margin-right: $component-margin !important;
+          }
+        }
         & > img,
         & > .filter-ally-wrapper > img {
           border-radius: 50%;
@@ -225,6 +237,12 @@
       & > *:last-child {
         margin-bottom: 0;
       }
+    }
+  }
+  // moving the .multi-author class to the component container
+  &.multi-author {
+    .card-author {
+      margin-right: $component-margin;
     }
   }
   &.collapsed {
