--- a/scss/print/_print-book.scss
+++ b/scss/print/_print-book.scss
@@ -437,14 +437,12 @@ html {
     & > :first-child {
       padding-left: 2.75rem;
       &::before {
-        content: '“';
+        @include fa-icon($fa-quote-left);
         color: $footer-dark;
-        font-family: "KingsCaslonDisplay";
-        font-size: 4.5rem;
-        font-weight: 900;
-        top: 2.5rem;
+        font-size: 1.5rem;
+        top: 18px;
         position: absolute;
-        left: $component-margin-sm;
+        left: 20px;
       }
     }
     .quote-attribution {
@@ -463,9 +461,6 @@ html {
     &.blockquote {
       padding-left: 4rem;
       blockquote.quote-body {
-        &::before {
-          top: $component-margin-xs;
-        }
         border: none;
         margin-bottom: $component-margin !important;
         padding: 0;
@@ -549,17 +544,14 @@ html {
         margin-bottom: 0;
       }
     }
-    img,
     figure {
       margin: 0 $component-margin 0 0;
       width: 330px;
     }
     img {
-      &.img-top {
-        width: 100%;
-        height: 100%;
-        margin: 0 0 $component-margin 0;
-      }
+      width: 100%;
+      height: 100%;
+      margin: 0 0 $component-margin 0;
       &.img-right {
         order: 2;
         margin: 0 0 0 $component-margin;
@@ -598,7 +590,7 @@ html {
       flex: 1 0 0%;
       margin: 0 $component-margin-sm $component-margin 0 !important;
       &:last-child {
-        margin: 0 0 $component-margin $component-margin-sm !important;
+        margin: 0 0 $component-margin 0 !important;
       }
       & > figure {
         order: 1;
@@ -1720,6 +1712,7 @@ html {
   }
 
   // View answer and Academic note
+  .academic-note-container,
   .view-generic-container,
   .view-answer-container,
   .view-description-container,
@@ -1731,7 +1724,6 @@ html {
     & > p,
     & > ul, & > ol {
       font-size: 1.2rem;
-      margin-left: calc(150px + #{$component-margin});
       border-left: $print-component-border;
       padding-left: $component-padding;
       margin-bottom:  0;
@@ -1753,7 +1745,7 @@ html {
         & > img,
         & > .filter-ally-wrapper > img {
           border-radius: 50%;
-          width: 75px;
+          width: 150px;
           max-width: 150px !important;
           height: auto;
           margin: 0 0 0.625rem 0;
@@ -1761,86 +1753,48 @@ html {
         .card-title {
           width: 150px;
           max-width: 150px;
+          font-size: 1.2rem;
         }
       }
       & > .card-text {
+        flex: 1;
+        border-left: $print-component-border;
+        padding-left: $component-padding;
         & > :last-child {
           margin-bottom: 0;
         }
       }
-      & .card-text:only-child,
-      & > p {
-        border-left: $print-component-border;
-        padding-left: $component-padding;
+    }
+    // only indent title if author name and image are present
+    &:has(.card-author img) {
+      & > h3, & > h4, & > h5, & > h6,
+      & > p,
+      & > ul, & > ol {
+        margin-left: calc(150px + #{$component-margin});
       }
     }
-  }
-  // large margin left for all but view description card text
-  .view-generic-container,
-  .view-answer-container,
-  .view-feedback-container,
-  .view-model-answer-container {
-    [class*="-card"] > .card-body {
-      & > .card-text {
-        border-left: $print-component-border;
-        padding-left: $component-margin;
-        width: 100%;
-      }
-      & > .card-text:only-child,
-      & > p {
-        margin-left: calc(150px + #{$component-margin});
-        max-width: calc(100% - 150px - #{$component-margin});
+    // further indent for mulitple authors
+    &.multi-author:has(.card-author img) {
+      & > h3, & > h4, & > h5, & > h6,
+      & > p,
+      & > ul, & > ol {
+        margin-left: calc(300px + (2 * #{$component-margin}));
       }
     }
   }
   .academic-note-container {
-    break-inside: avoid;
-    margin-bottom: $component-margin-bottom;
     .academic-note-card {
       & > .card-body {
-        display: flex;
         flex-wrap: wrap;
-        .card-author:not(.no-image) {
-          text-align: center;
-          & > img,
-          & > .filter-ally-wrapper > img {
-            border-radius: 50%;
-            width: 75px;
-            max-width: 75px !important;
-            height: auto;
-            margin: 0 0 0.625rem 0;
-          }
-          .card-title {
-            max-width: 150px;
-          }
-        }
         .card-author.no-image {
           order: 2;
           flex: 0 1 100%;
-          margin-left: calc(150px + #{$component-margin});
           padding: $component-padding 0 0 $component-padding;
           border-left: $print-component-border;
           .card-title {
             margin-bottom: 0;
+            font-size: 1.2rem;
           }
-          & + .card-text {
-            margin-left: calc(150px + #{$component-margin});
-            max-width: calc(100% - 150px - #{$component-margin});
-          }
-        }
-        & > .card-text {
-          flex: 1;
-          margin-left: $component-margin;
-          padding-left: $component-padding;
-          border-left: $print-component-border;
-          & > :last-child {
-            margin-bottom: 0;
-          }
-        }
-        & > .card-text:only-child,
-        & > p {
-          margin-left: calc(150px + #{$component-margin});
-          max-width: calc(100% - 150px - #{$component-margin});
         }
       }
     }
